# asr_robot_model_services

./: .directory  .gitignore  CMakeLists.txt  README.md  package.xml
include/robot_model_services/: typedef.hpp
include/robot_model_services/helper/: DebugHelper.hpp  MapHelper.hpp  MathHelper.hpp  TypeHelper.hpp
include/robot_model_services/rating/: IKRatingModule.h
include/robot_model_services/rating/impl/: AngleApproximationIKRatingModule.h  NavigationPathIKRatingModule.h  SimpleIKRatingModule.h
include/robot_model_services/robot_model/: RobotModel.hpp  RobotModelAbstractFactory.hpp  RobotState.hpp
include/robot_model_services/robot_model/impl/: MILDRobotModel.hpp  MILDRobotModelWithApproximatedIK.hpp  MILDRobotModelWithApproximatedIKFactory.hpp  MILDRobotModelWithExactIK.hpp  MILDRobotModelWithExactIKFactory.hpp  MILDRobotState.hpp
include/robot_model_services/test_cases/: BaseTest.h
launch/: RobotModelServiceReal.launch  RobotModelServiceSim.launch  set_focus_point.launch  test_IK.launch
param/: robot_model_services_settings_sim.yaml
rsc/: DynamicParameters.cfg  SetFocusPoint.py  TopicsConfig.yaml  costmap.pgm  robot_model_services_settings_real.yaml  robot_model_services_settings_sim.yaml
src/: RobotModel_Service.cpp
src/helper/: DebugHelper.cpp  MathHelper.cpp  TypeHelper.cpp
src/rating/: IKRatingModule.cpp
src/rating/impl/: AngleApproximationIKRatingModule.cpp  NavigationPathIKRatingModule.cpp  SimpleIKRatingModule.cpp
src/robot_model/: RobotModel.cpp  RobotState.cpp
src/robot_model/impl/: MILDRobotModel.cpp  MILDRobotModelWithApproximatedIK.cpp  MILDRobotModelWithExactIK.cpp  MILDRobotState.cpp
src/test_cases/: BaseTest.cpp  IKTest.cpp
