<package>
  <name>asr_robot_model_services</name>
  <version>1.0.0</version>
  <description>This package provides services to perform calculations related to the mild's kinematic model.</description>
  <author>Aumann Florian, Borella Jocelyn, Heller Florian, Meißner Pascal, Schleicher Ralf, Stöckle Patrick, Stroh Daniel, Trautmann Jeremias, Walter Milena, Wittenbeck Valerij</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD-derived</license>
  <url type="website">http://wiki.ros.org/asr_robot_model_services</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend> 
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>asr_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>glpk</build_depend>
  
  <run_depend>asr_flir_ptu_controller</run_depend>
  <run_depend>asr_flir_ptu_driver</run_depend>
  <run_depend>world_model</run_depend>
  <run_depend>asr_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>glpk</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/msg/cpp -I${prefix}/srv/cpp" lflags="-L${prefix}/lib"/>
  </export>
</package>


